--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,10 @@ section {
 	min-height: 100vh;
 }
 
+#welcome {
+	font-size: 4rem;
+}
+
 .landing-screen {
 	display: flex;
 	flex-direction: column;
